Fix sidebar and FASTA ID wrapping (#804)
* Fix sidebar option selected, share results white spacing & fasta ids

* Fix table hit wrapping & add scrollbar for mobile view

* Fix border highlight to stay still when selected

* Add grey boarder to selected hits when moused over

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,6 +71,11 @@ pre.indL {
   @apply cursor-not-allowed pointer-events-none text-gray-400;
 }
 
+li:hover .download-fasta-of-selected:not(.disabled), 
+li:hover .download-alignment-of-selected:not(.disabled) {
+  @apply bg-gray-200 text-seqorange;
+}
+
 /* Text size */
 .hit-text,
 .pre-text,
